# screenplay-agent

./: Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
data/: movie_list.json
scripts/: 10 Things I Hate About You.txt  12 Monkeys.txt  12 Years a Slave.txt  12 and Holding.txt  12.txt  127 Hours.txt  1492- Conquest of Paradise.txt  15 Minutes.txt  17 Again.txt  187.txt  2001- A Space Odyssey.txt  2012.txt  20th Century Women.txt  25th Hour.txt  28 Days Later.txt  30 Minutes or Less.txt  42.txt  44 Inch Chest.txt  48 Hrs..txt  50-50.txt  500 Days of Summer.txt  8 Mile.txt  8MM.txt  9.txt  A Few Good Men.txt  A Good Person.txt  A Million Miles Away.txt  A Most Violent Year.txt  A Prayer Before Dawn.txt  A Quiet Place.txt  A Real Pain.txt  A Scanner Darkly.txt  A Serious Man.txt  Above the Law.txt  Absolute Power.txt  Abyss, The.txt  Ace Ventura- Pet Detective.txt  Ad Astra.txt  Adaptation.txt  Addams Family, The.txt  (+1210 more)
src/: agent.py  config.py  tools.py  utils.py
src/notebooks/: agent_chat.ipynb  agent_playbook.ipynb  chunk_data.ipynb  embed_data.ipynb  eval_dataset.ipynb  rag_agent.ipynb  scraper.ipynb  vectorstore_lancedb.ipynb
