[project]
name = "screenplay-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.24.1",
    "langchain_core>=0.3.69",
    "langchain_deepseek>=0.1.3",
    "langgraph>=0.5.3",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.13.0",
    #    "sentence_transformers>=4.1.0",
    "beautifulsoup4>=4.13.4",
    "Requests>=2.32.4",
    "pandas"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "langgraph-api>=0.2.56",
    "langgraph-cli>=0.3.3"
]
